# eurocable

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  dyn-build.yaml  invoke.yaml.template  requirements-dev.txt  requirements.txt  tasks.py
.github/workflows/: pre-commit-ci.yml
addons/: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  .pylintrc  .pylintrc-mandatory  .ruff.toml  CODEOWNERS
addons/eurocable_account/: README.rst  __manifest__.py
addons/eurocable_contacts/: README.rst  __manifest__.py
addons/eurocable_mrp/: __init__.py  __manifest__.py
addons/eurocable_profile/: README.rst  __init__.py  __manifest__.py
addons/eurocable_purchase/: README.rst  __manifest__.py
addons/eurocable_sale/: __manifest__.py
addons/eurocable_stock/: __manifest__.py
addons/xx_all/: README.rst  __manifest__.py
addons/xx_base/: README.rst  __manifest__.py
addons_community/base_location/: __manifest__.py
addons_community/base_report_to_printer/: __manifest__.py
addons_community/printnode_base/: README.rst  __manifest__.py
addons_community/purchase_allowed_product/: __manifest__.py
addons_community/so_invoice_no_merge/: __manifest__.py
config/server_environment_files/: README.rst  __manifest__.py
i18n/: fr_BE.po
parts/database_cleanup/: __manifest__.py
parts/dyn_analytics/: README.rst  __manifest__.py  hooks.py
parts/dyn_ftp_connection/: README.rst  __manifest__.py
parts/oca/server-env/setup/_metapackage/: pyproject.toml
(+556 files in other folders)
