[project]
name = "odoo-addons-oca-server-env"
version = "17.0.20241112.0"
dependencies = [
    "odoo-addon-data_encryption>=17.0dev,<17.1dev",
    "odoo-addon-mail_environment>=17.0dev,<17.1dev",
    "odoo-addon-mail_environment_office365>=17.0dev,<17.1dev",
    "odoo-addon-server_environment>=17.0dev,<17.1dev",
    "odoo-addon-server_environment_ir_config_parameter>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
